<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperprincipal"
    tools:context=".MainActivity2Lvl3">

    <TextView
        android:id="@+id/txtPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtName"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtScore"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPlayer" />

    <TextView
        android:id="@+id/txtChances"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtChance"
        android:textSize="18sp"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtScore" />

    <ImageView
        android:id="@+id/ivChances"
        android:layout_width="80dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/txtChances"
        app:layout_constraintTop_toBottomOf="@+id/txtScore"
        app:srcCompat="@drawable/tresvidas" />

    <ImageView
        android:id="@+id/ivNum1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChances"
        app:srcCompat="@drawable/zero" />

    <ImageView
        android:id="@+id/ivOperator"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/ivNum2"
        app:layout_constraintStart_toEndOf="@+id/ivNum1"
        app:layout_constraintTop_toBottomOf="@+id/ivChances"
        app:srcCompat="@drawable/resta" />

    <ImageView
        android:id="@+id/ivNum2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChances"
        app:srcCompat="@drawable/zero" />

    <EditText
        android:id="@+id/txtAnswer"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="18sp"
        android:hint="@string/txtAnswer"
        android:textColor="@android:color/background_dark"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toStartOf="@+id/btnAnswer"
        app:layout_constraintTop_toBottomOf="@+id/ivNum1" />

    <Button
        android:id="@+id/btnAnswer"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btnAnswer"
        android:background="@drawable/fondoboton"
        android:onClick="btnAnswer"
        android:textSize="14sp"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivNum2" />
</androidx.constraintlayout.widget.ConstraintLayout>